--- a/index.html
+++ b/index.html
@@ -9,52 +9,11 @@
 </head>
 <body>
 	<header class="intro">
-		<ul class="back-list">
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-			<li class="quad"></li>
-		</ul>
 		<div class="desc">
-			<h1 class="event-name">I Ciclo de Palestras da PRPG</h1>
-			<h3 class="event-desc">UFPI em busca da excelência na Pós-Graduação</h3>
-			<h3 class="event-info">07 / 11 de 8h às 18h no Auditório do CT</h3>
+			<h1 class="event-name">I Ciclo de Palestras da <em>PRPG</em></h1>
+			<hr>
+			<h3 class="event-desc">"UFPI em busca da excelência na Pós-Graduação"</h3>
+			<h3 class="event-info">07/11 de 8h às 18h no Auditório do CT</h3>
 		</div>
 	</header>
 
@@ -280,19 +239,27 @@
 
 	<section class="apoio">
 		<div class="desc container">
+			<h1>Realização</h1>
 			<div class="row">
-				<h1>Apoio</h1>
+				<div class="col-sm-3"></div>
+				<div class="col-sm-6">
+					<a href="http://ufpi.br"><img class="img-ufpi" src="assets/img/ufpi.png"></a>
+				</div>
+				<div class="col-sm-3"></div>
 			</div>
-			<div class="col-sm-2"></div>
-			<div class="col-sm-8"><img src="assets/img/factos_logo.svg"></div>
-			<div class="col-sm-2"></div>
+			<h1>Apoio</h1>
+			<div class="row">
+				<div class="col-sm-3"></div>
+				<div class="col-sm-6">
+					<a href="http://factos.ufpi.br"><img class="img-factos" src="assets/img/factos_logo.svg"></a>
+				</div>
+				<div class="col-sm-3"></div>
+			</div>
 		</div>
 	</section>
 </body>
 </html>
 
-<!-- 
-	Logo do Evento
-	Realização UFPI
+<!--
 	Formulário de Inscrição
 -->
