Botão de inscrição

--- a/index.html
+++ b/index.html
@@ -209,24 +209,21 @@
 		
 		<div class="desc container">
 			<div class="row">
-				<div class="col-sm-1"></div>
-				<div class="col-sm-3">
+				<div class="col-sm-4">
 					<img class="img-thumbnail img-responsive" src="assets/img/Prof. Fábio Henrique Barros de Lima.jpg">
 					<div class="capt">
 						<h3>Prof. Fábio Henrique Barros de Lima</h3>
 						<p>Graduado em Química, em 2001, e Doutorado em Físico-Química pela Universidade de São Paulo no Instituto de Química de São Carlos (IQSC), em 2006, com estágio no Brookhaven National Laboratory. Pós-doutoramento no IQSC, entre 2006 e 2008.</p>
 					</div>
 				</div>
-				<div class="col-sm-1"></div>
-				<div class="col-sm-3">
+				<div class="col-sm-4">
 					<img class="img-thumbnail img-responsive" src="assets/img/Prof Emídio Cantídio.jpg">
 					<div class="capt">
 						<h3>Prof. Emídio Cantídio</h3>
 						<p>Engenheiro Agrônomo graduado pela Universidade Federal Rural de Pernambuco-UFRPE (1973), Mestre em Ciências do Solo e Água pela University of California, Davis (1977) e Doutor em Ciências do Solo pela University of California, Davis (1982).</p>
 					</div>
 				</div>
-				<div class="col-sm-1"></div>
-				<div class="col-sm-3">
+				<div class="col-sm-4">
 					<img class="img-thumbnail img-responsive" src="assets/img/Profa. Maria Clorinda.jpg">
 					<div class="capt">
 						<h3>Profa. Maria Clorinda</h3>
@@ -235,9 +232,13 @@
 				</div>
 			</div>
 		</div>
+		<div class="subscribe">
+			<br>
+			<a href="">Inscreva-se</a>
+		</div>
 	</section>
 
-	<section class="apoio">
+	<section class="support">
 		<div class="desc container">
 			<h1>Realização</h1>
 			<div class="row">
@@ -259,7 +260,3 @@
 	</section>
 </body>
 </html>
-
-<!--
-	Formulário de Inscrição
--->
