Atualização do local do minicurso e da programação

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<div class="col-xs-2"></div>
 				<div class="col-xs-2">
 					<div class="hour">
-						<p class="h">8:30</p>
+						<p class="h">8:00</p>
 						<img class="circle" src="assets/img/circle.svg">
 					</div>
 				</div>
@@ -37,6 +37,32 @@
 					<h1>Abertura</h1>
 				</div>
 				<div class="col-xs-1"></div>
+			</div>
+		</div>
+
+		<hr class="line">
+
+		<div class="item container">
+			<div class="row">
+				<div class="col-xs-2"></div>
+				<div class="col-xs-2">
+					<div class="hour">
+						<p class="h">8:30</p>
+						<img class="circle" src="assets/img/circle.svg">
+					</div>
+				</div>
+				<div class="col-xs-7">
+					<h1>The End</h1>
+				</div>
+				<div class="col-xs-1"></div>
+			</div>
+			<div class="row description">
+				<div class="col-md-2"></div>
+				<div class="col-md-8">
+					<h1>Apresentação da ferramenta The End<h1>
+					<p></p>
+				</div>
+				<div class="col-md-2"></div>
 			</div>
 		</div>
 
@@ -193,7 +219,7 @@
 					<hr>
 					<p><em>Período:</em> 03 a 11 de novembro - Manhã</p>
 					<hr>
-					<p><em>Local:</em> Departamento de Matemática - CCN</p>
+					<p><em>Local:</em> Auditório do CTT - Colégio Técnico de Teresina</p>
 				</div>
 				<div class="col-xs-2"></div>
 			</div>
